manifests/network_policies/allow_external_traffic_to_application_ports.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-external
spec:
  # Séléctionne les pods avec le tag app1
  podSelector:
    matchLabels:
      app: app1
  # Autorise uniquement l'accès à l'app via le port 80
  ingress:
  - ports:
    - port: 80
