manifests/network_policies/namespace_network_isolation.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-other-namespaces-ingress
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
